--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.kkk.usury.view.MainActivity">
+    android:background="#fff"
+    >
+    <RadioGroup
+        android:id="@+id/main_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/bottom_bar_taobao_bg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
+        <RadioButton
+            android:id="@+id/layout_home"
+            android:drawableTop="@drawable/selector_menu_item_category"
+            style="@style/menu_item_style"
+            android:text="首页"
+            android:button="@null"
+            android:textColor="@color/main_botton_text_color"
+            android:checked="true"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <RadioButton
+            android:id="@+id/layout_cart"
+            android:drawableTop="@drawable/selector_menu_item_cart"
+            style="@style/menu_item_style"
+            android:text="速贷超市"
+            android:button="@null"
+            android:textColor="@color/main_botton_text_color"
+            android:checked="false"
+            />
 
-</android.support.constraint.ConstraintLayout>
+        <RadioButton
+            android:id="@+id/layout_personal_center"
+            android:drawableTop="@drawable/selector_menu_item_personal_center"
+            style="@style/menu_item_style"
+            android:text="我"
+            android:button="@null"
+            android:textColor="@color/main_botton_text_color"
+            android:checked="false"
+            />
+    </RadioGroup>
+
+    <View
+        android:id="@+id/vLine"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_above="@id/main_bottom"
+        android:background="#D6DCDC"
+        />
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_above="@id/vLine"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="3dp"
+        />
+
+
+
+</RelativeLayout>
