--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/app_name1"
+    android:text="@string/app_name"
     android:textSize="21dp"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
