--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimaryBlue">#3b75d9</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bottom_bar_taobao_bg">#F9F7F4</color>
+    <color name="menu_item_normal">#6A7077</color>
+    <color name="menu_item_pressed">#FF7A49</color>
+    <color name="menu_item_selected">#FF7A49</color>
+
+    <color name="windows_color">#F5F5F5</color>
+
 </resources>
