--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/fragment_bg"
+              android:orientation="vertical"
     >
+
     <RelativeLayout
         android:id="@+id/center_user_info"
         android:layout_width="match_parent"
-        android:layout_height="120sp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimaryBlue"
         >
+        <ImageView
+            android:layout_width="35sp"
+            android:layout_height="35sp"
+            android:src="@drawable/tb_icon_more_msg_56"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="8sp"
+            android:layout_marginTop="8dp"
+            />
         <ImageView
             android:id="@+id/iv_user_avatar"
             android:layout_width="60dip"
             android:layout_height="60dip"
-            android:layout_alignParentLeft="true"
             android:layout_marginTop="20sp"
             android:layout_marginStart="30sp"
             android:scaleType="centerCrop"
@@ -25,20 +33,19 @@
             android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_below="@id/iv_user_avatar"
             android:layout_marginTop="8sp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="35sp"
             android:text="sd289"
             android:textSize="18sp"
             android:textColor="@color/white"/>
     </RelativeLayout>
 
-    <!--信用资料-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="@color/white"
@@ -48,7 +55,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/center_card_coupon3"/>
         <TextView
             android:layout_width="0dp"
@@ -185,6 +192,10 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/right_arrow_icon"/>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/gray"/>
 
 
 </LinearLayout>
