"首页""速贷超市"fragment界面思路整理：主要是GridView, ListView，CardView的的运用

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -11,6 +11,7 @@
         android:text="速贷超市界面"
         android:textSize="22sp"
         />
-
+    <!--顶部title、include-->
+    <!--今日产品列表：RecyclerView-->
 
 </FrameLayout>
