--- a/app/src/main/res/layout/item_app_new_goods.xml
+++ b/app/src/main/res/layout/item_app_new_goods.xml
@@ -38,7 +38,7 @@
                 android:layout_marginStart="10dp"
                 />
             <TextView
-                android:id="@+id/appName"
+                android:id="@+id/tv_appName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="速贷"
@@ -64,7 +64,7 @@
             android:text="一分钟申请，最高额度10万"
             />
         <TextView
-            android:id="@+id/app_intro"
+            android:id="@+id/tv_appIntro"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
