--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="white">#ffffff</color>
     <color name="gray">#969292</color>
     <color name="black">#000000</color>
+    <color name="red">#f00</color>
 </resources>
