--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray">#969292</color>
     <color name="black">#000000</color>
     <color name="red">#f00</color>
+    <color name="divide_yellow">#f2b355</color>
 </resources>
