--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -147,7 +147,7 @@
 
                 </android.support.v7.widget.RecyclerView>
 
-                <!--速贷推荐CardView--> 
+                <!--速贷推荐gallery模式--> 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
