--- a/app/src/main/res/layout/item_app_new_goods.xml
+++ b/app/src/main/res/layout/item_app_new_goods.xml
@@ -1,76 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@color/fragment_bg"
     >
-
-    <ImageView
-        android:id="@+id/ivThumb"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baidu_safe"
-        android:layout_weight="1"
-        />
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_toRightOf="@id/ivThumb"
-        android:orientation="vertical"
-        android:layout_weight="3.5"
-        android:padding="8sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <ImageView
+            android:id="@+id/ivThumb"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baidu_safe"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/ivThumb"
+            android:orientation="vertical"
+            android:layout_weight="3.5"
+            android:padding="8sp"
             >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="新上线"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="新产品"
+                    android:layout_marginStart="10dp"
+                    />
+                <TextView
+                    android:id="@+id/tv_appName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="速贷"
+                    android:textColor="@color/red"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="强势登陆XXXX"
+                    />
+            </LinearLayout>
+            <!--
+            <ListView
+                android:id="@+id/LV_textLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </ListView>
+            -->
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="新上线"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="一分钟申请，最高额度10万"
                 />
             <TextView
+                android:id="@+id/tv_appIntro"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="新产品"
-                android:layout_marginStart="10dp"
-                />
-            <TextView
-                android:id="@+id/tv_appName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="速贷"
-                android:textColor="@color/red"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="强势登陆XXXX"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="一分钟申请，最高额度10万"
+                android:maxLines="1"
                 />
         </LinearLayout>
-        <!--
-        <ListView
-            android:id="@+id/LV_textLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </ListView>
-        -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="一分钟申请，最高额度10万"
-            />
-        <TextView
-            android:id="@+id/tv_appIntro"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="一分钟申请，最高额度10万"
-            android:maxLines="1"
-            />
     </LinearLayout>
+
 
 </LinearLayout>
