--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="black">#000000</color>
     <color name="red">#f00</color>
     <color name="divide_yellow">#f2b355</color>
+    <color name="yellow">#ff0</color>
+    <color name="gray1">#f2f1f1</color>
 </resources>
