--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -13,31 +13,31 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <TableLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="0"
-            android:orientation="horizontal"
+            android:background="@color/colorPrimaryBlue"
+            android:padding="6dp"
             >
-            <TableRow
-                android:background="@color/colorPrimaryBlue"
-                android:gravity="center_vertical"
-                >
-                <TextView
-                    android:text="速贷超市"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    />
-                <ImageView
-                    android:src="@drawable/right_arrow_icon"
-                    />
-            </TableRow>
-        </TableLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="速贷超市"
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/right_arrow_icon"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="@dimen/fragment_market_marginRight"
+                />
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal"
-
             >
             <LinearLayout
                 android:layout_width="0dp"
@@ -53,6 +53,7 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
+                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
                     />
             </LinearLayout>
             <LinearLayout
@@ -64,11 +65,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="上班族"/>
+                    android:text="金额不限"/>
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
+                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
                     />
             </LinearLayout>
             <LinearLayout
@@ -80,11 +82,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="上班族"/>
+                    android:text="贷款类型"/>
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
+                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
                     />
             </LinearLayout>
         </LinearLayout>
