--- a/app/src/main/res/layout/item_market_app.xml
+++ b/app/src/main/res/layout/item_market_app.xml
@@ -27,28 +27,42 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:paddingLeft="5dp"
+            android:layout_margin="5dp"
+            android:orientation="vertical"
             >
             <TextView
+                android:id="@+id/tv_appName_market"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="借钱快"
+                android:text="App名称"
+                android:textSize="16sp"
                 />
-            <TextView
+            <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="借钱快"
+                android:numStars="5"
+                android:isIndicator="true"
+                android:rating="3.5"
+                android:stepSize="0.5"
+                style="?android:ratingBarStyleSmall"
                 />
-            <TextView
+            <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="借钱快"
-                />
+                android:layout_gravity="center_vertical"
+                >
+                <TextView
+                    android:id="@+id/tv_appLabel_market"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="借钱快"
+                    />
+            </TableLayout>
+
         </LinearLayout>
         <RelativeLayout
             android:layout_width="0dp"
@@ -71,14 +85,23 @@
                 />
         </RelativeLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/tv_market_appInfo"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="日息0.56%,操作简单，费用低"
-        android:maxLines="1"
-        android:layout_marginLeft="8dp"
-        />
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        >
+        <TextView
+            android:id="@+id/tv_market_appInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="日息0.56%,操作简单，费用低"
+            android:maxLines="1"
+            android:layout_marginLeft="8dp"
+            android:gravity="center_vertical"
+            />
+
+    </LinearLayout>
 
 
 </LinearLayout>
