--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               tools:context="cn.kkk.usury.view.fragment.HomeFragment"
               android:orientation="vertical"
               android:background="@color/fragment_bg"
@@ -19,11 +20,31 @@
                 android:orientation="vertical"
                 >
                 <!-- 轮播图 -->
-                <ImageView
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/temp_slideshow"
-                    />
+                    android:layout_height="120dp">
+                    <cn.kkk.usury.view.widget.SlideLoopView
+                        android:id="@+id/slv_homeFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    </cn.kkk.usury.view.widget.SlideLoopView>
+                    <cn.kkk.usury.view.widget.FlowIndicator
+                        android:id="@+id/flowIndicator_homeFragment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginEnd="20dp"
+                        app:count="5"
+                        app:focus="0"
+                        app:focus_color="#f00"
+                        app:normal_color="#ccc"
+                        app:radius="5dp"
+                        app:space="5dp"
+                        />
+                </RelativeLayout>
                 <!--贷款人身份、点击跳转到速贷超市界面-->
                 <LinearLayout
                     android:layout_width="match_parent"
