--- a/app/src/main/res/layout/item_market_app.xml
+++ b/app/src/main/res/layout/item_market_app.xml
@@ -50,19 +50,29 @@
                 android:stepSize="0.5"
                 style="?android:ratingBarStyleSmall"
                 />
-            <TableLayout
+            <!--
+            <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                 >
-                <TextView
-                    android:id="@+id/tv_appLabel_market"
+
+            </HorizontalScrollView>
+            -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <GridView
+                    android:id="@+id/gv_appLabel_market"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:numColumns="5"
                     android:text="借钱快"
                     />
-            </TableLayout>
+            </LinearLayout>
+
 
         </LinearLayout>
         <RelativeLayout
