--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,6 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:background="@color/white"
                     >
 
                     <LinearLayout
@@ -147,15 +148,112 @@
                 <!--滚动信息-->
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:layout_marginTop="8sp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/white"
                     >
-
-                    <ImageView
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/temp_news"
-                        />
+                        android:layout_alignParentEnd="true"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="今日"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="163098"
+                            android:layout_marginStart="2dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="成功申请"
+                            android:layout_marginStart="2dp"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:weightSum="10"
+                        >
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.5"
+                            >
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/baidu_safe"
+                                android:background="@color/white"
+                                />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="6.5"
+                            android:padding="5dp"
+                            android:orientation="vertical"
+                            >
+                            <TextView
+                                android:id="@+id/tv_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/app_name_default1"
+                                android:textSize="18sp"
+                                />
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                >
+                                <TextView
+                                    style="@style/text_vertical_loop"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="广州的上班族"
+                                    />
+                                <TextView
+                                    style="@style/text_vertical_loop"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/red"
+                                    android:text="柳先生"
+                                    />
+                                <TextView
+                                    style="@style/text_vertical_loop"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="今日借款"
+                                    android:layout_marginStart="5dp"
+                                    />
+
+                                <TextView
+                                    style="@style/text_vertical_loop"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/red"
+                                    android:text="5000元"
+                                    />
+                                <TextView
+                                    style="@style/text_vertical_loop"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="已到账"
+
+                                    />
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
                 </RelativeLayout>
 
                 <!--8张图片GridView-->
@@ -164,6 +262,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:layout_marginTop="8dp"
                     >
 
                 </android.support.v7.widget.RecyclerView>
@@ -248,7 +347,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="速贷攻略图"
+                    android:text="（速贷攻略,需要改成图片）"
                     android:textColor="@color/red"
                     android:gravity="center"
                     android:background="@color/yellow"
