--- a/app/src/main/res/layout/item_fast_recommend.xml
+++ b/app/src/main/res/layout/item_fast_recommend.xml
@@ -8,27 +8,35 @@
     card_view:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="110dp"
+        android:layout_height="90dp"
         android:orientation="vertical"
-        android:background="@color/white"
-        android:padding="4dp">
+        android:background="@color/fragment_bg"
+        android:layout_margin="5dp"
+        android:weightSum="4"
+        android:gravity="center"
+        >
 
         <ImageView
             android:id="@+id/iv_fastLoan"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:src="@drawable/baidu_safe"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            />
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
             <TextView
                 android:id="@+id/tv_fastLoanName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/temp_name"
+                android:text="@string/app_name_default1"
                 android:layout_centerHorizontal="true"
+                android:maxLines="1"
                 />
         </RelativeLayout>
 
