--- a/app/src/main/res/layout/item_strategy.xml
+++ b/app/src/main/res/layout/item_strategy.xml
@@ -10,15 +10,23 @@
         android:orientation="horizontal"
         android:layout_marginBottom="10dp"
         android:background="@color/white"
+        android:padding="3dp"
         >
-        <ImageView
-            android:id="@+id/iv_strategy_thumb"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/baidu_safe"
             android:layout_marginLeft="10dp"
-            />
+            >
+            <ImageView
+                android:id="@+id/iv_strategy_thumb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baidu_safe"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
