优惠活动RecyclerView界面调整：背景色、尺寸。 bug：同样的代码，全局显示/不全局显示？？？（代码在 item_special_offer.xml注释部分）

--- a/app/src/main/res/layout/item_special_offer.xml
+++ b/app/src/main/res/layout/item_special_offer.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-           android:orientation="vertical"
-              android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="7dp"
+        android:layout_height="90dp"
+        android:padding="2dp"
         android:background="@color/white"
+        android:layout_marginTop="7dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
         >
+
         <ImageView
             android:id="@+id/iv_special_offer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="match_parent"
             android:src="@drawable/baidu_safe"
-            />
-    </LinearLayout>
+            android:scaleType="centerCrop" />
+    </RelativeLayout>
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:padding="2dp"-->
+        <!--&gt;-->
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_special_offer"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:src="@drawable/baidu_safe"-->
+            <!--android:scaleType="center"-->
+            <!--/>-->
+    <!--</RelativeLayout>-->
 
 </LinearLayout>
