--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -13,27 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryBlue"
-            android:padding="6dp"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="速贷超市"
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"
-                />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/right_arrow_icon"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="@dimen/fragment_market_marginRight"
-                />
-        </RelativeLayout>
+        <include layout="@layout/common_head_title_market"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -53,7 +33,7 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
-                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
+                    android:layout_marginLeft="@dimen/margin_left_5"
                     />
             </LinearLayout>
             <LinearLayout
@@ -70,7 +50,7 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
-                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
+                    android:layout_marginLeft="@dimen/margin_left_5"
                     />
             </LinearLayout>
             <LinearLayout
@@ -87,7 +67,7 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/expand_on"
-                    android:layout_marginLeft="@dimen/fragment_market_marginLeft_type"
+                    android:layout_marginLeft="@dimen/margin_left_5"
                     />
             </LinearLayout>
         </LinearLayout>
