--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="fragment_market_marginLeft_type">5dp</dimen>
-    <dimen name="fragment_market_marginRight">5dp</dimen>
+    <dimen name="margin_left_5">5dp</dimen>
+    <dimen name="margin_right_5">5dp</dimen>
+    <dimen name="padding_3">3dp</dimen>
+    <dimen name="margin_left_10">10dp</dimen>
+    <dimen name="margin_right_10">10dp</dimen>
 </resources>
