--- a/app/src/main/res/layout/fragment_login_idencifying_code.xml
+++ b/app/src/main/res/layout/fragment_login_idencifying_code.xml
@@ -3,56 +3,56 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
+    <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="45dp"-->
+        <!--android:background="@color/white"-->
 
-        >
+        <!--&gt;-->
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_fast"
-                    android:textSize="22sp"
-                    android:layout_centerInParent="true"
-                    />
-            </RelativeLayout>
-            <View
-                android:layout_width="150dp"
-                android:layout_height="2dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/colorPrimaryBlue"
-                android:layout_centerHorizontal="true"
-                />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_password"
-                    android:textSize="22sp"
-                    android:layout_centerInParent="true"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        <!--<RelativeLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--&gt;-->
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/login_fast"-->
+                    <!--android:textSize="22sp"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--/>-->
+            <!--</RelativeLayout>-->
+            <!--<View-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_height="2dp"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:background="@color/colorPrimaryBlue"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--/>-->
+        <!--</RelativeLayout>-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--&gt;-->
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/login_password"-->
+                    <!--android:textSize="22sp"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--/>-->
+            <!--</RelativeLayout>-->
+        <!--</RelativeLayout>-->
+    <!--</LinearLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
