--- a/app/src/main/res/layout/fragment_login_password.xml
+++ b/app/src/main/res/layout/fragment_login_password.xml
@@ -4,56 +4,6 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/white"
-
-        >
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_fast"
-                    android:textSize="22sp"
-                    android:layout_centerInParent="true"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login_password"
-                    android:textSize="22sp"
-                    android:layout_centerInParent="true"
-                    />
-                <View
-                    android:layout_width="150dp"
-                    android:layout_height="2dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/colorPrimaryBlue"
-                    android:layout_centerHorizontal="true"
-                    />
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:gravity="center_vertical"
@@ -75,7 +25,7 @@
         android:background="@color/white"
         >
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_hint"
             android:layout_marginStart="@dimen/margin_left_10"
@@ -102,6 +52,36 @@
             android:layout_weight="3"
             android:text="@string/login"
             />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:weightSum="10"
+        >
+       <TextView
+           android:layout_width="0dp"
+           android:layout_height="match_parent"
+           android:text="@string/register"
+           android:gravity="center"
+           android:layout_weight="2.5"
+           />
+        <View
+            android:layout_width="2dp"
+            android:layout_height="20dp"
+            android:background="@color/gray"
+            android:layout_gravity="center"
+            />
+       <TextView
+           android:layout_width="0dp"
+           android:layout_height="match_parent"
+           android:text="@string/forgive_password"
+           android:gravity="center"
+           android:layout_weight="2.5"
+           />
+
+
     </LinearLayout>
 
 </LinearLayout>
