首页底部菜单按钮的字体大小调整：修改style，将公用的style拆分 新产品上线RecyclerView中，列表项布局文件的间距调整，修改padding的值

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             >
             <RadioButton
                 android:id="@+id/menu_code"
-                style="@style/menu_item_style"
+                style="@style/login_item_style"
                 android:text="快捷登录"
                 android:button="@null"
                 android:textColor="@color/main_botton_text_color"
@@ -27,7 +27,7 @@
                 />
             <RadioButton
                 android:id="@+id/menu_password"
-                style="@style/menu_item_style"
+                style="@style/login_item_style"
                 android:text="账号登录"
                 android:button="@null"
                 android:textColor="@color/main_botton_text_color"
