--- a/app/src/main/res/layout/item_app_new_goods.xml
+++ b/app/src/main/res/layout/item_app_new_goods.xml
@@ -33,6 +33,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="4"
+            android:padding="8dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
