--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,17 @@
         <item name="android:gravity">center</item>
         <item name="android:paddingTop">7dp</item>
         <item name="android:textColor">#fff</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:onClick">onCheckedChange</item>
+    </style>
+    <style name="login_item_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:drawablePadding">7dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:textColor">#fff</item>
         <item name="android:textSize">22sp</item>
         <item name="android:onClick">onCheckedChange</item>
     </style>
