--- a/app/src/main/res/layout/fragment_login_password.xml
+++ b/app/src/main/res/layout/fragment_login_password.xml
@@ -10,11 +10,13 @@
         android:layout_marginTop="10dp"
         android:background="@color/white"
         >
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et_phone_num"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_username_hint"
             android:layout_marginStart="@dimen/margin_left_10"
+            android:background="@null"
             />
     </LinearLayout>
     <RelativeLayout
@@ -24,11 +26,14 @@
         android:layout_marginTop="2dp"
         android:background="@color/white"
         >
-        <TextView
+        <EditText
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_hint"
             android:layout_marginStart="@dimen/margin_left_10"
+            android:inputType="textPassword"
+            android:background="@null"
             />
         <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
@@ -47,6 +52,7 @@
         android:layout_marginTop="15dp"
         >
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -61,6 +67,7 @@
         android:weightSum="10"
         >
        <TextView
+           android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/register"
@@ -74,6 +81,7 @@
             android:layout_gravity="center"
             />
        <TextView
+           android:id="@+id/tv_password_lost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/forgive_password"
